# ruhop

./: .gitignore  CHANGELOG.md  CONFIG.md  CONFIG.zh-CN.md  Cargo.toml  README.md  README.zh-cn.md  rr.toml  ruhop.toml  server-test.toml
.github/workflows/: ci.yml  release.yml
docs/: CONFIG.md  CONFIG.zh-CN.md  OPERATION.md  OPERATION.zh-CN.md  OPERATION_zh.md  PROTOCOL.md  PROTOCOL.zh-CN.md  PROTOCOL_zh.md
e2e/: 01-basic-connectivity.sh  02-port-hopping.sh  03-multi-homed-server.sh  04-data-transfer.sh  05-auto-reconnect.sh  06-multi-client.sh  07-lifecycle-scripts.sh  08-bandwidth.sh  09-graceful-shutdown.sh  10-error-handling.sh  11-dns-proxy.sh  12-dns-ipset.sh  README.md  common.sh  run-all-tests.sh
hop-dns/: Cargo.toml
hop-dns/src/: cache.rs  client.rs  config.rs  error.rs  lib.rs  proxy.rs
hop-protocol/: Cargo.toml  README.md  README.zh-cn.md
hop-protocol/src/: address.rs  buffer_pool.rs  crypto.rs  error.rs  flags.rs  fragment.rs  lib.rs  packet.rs  pool.rs  session.rs  transport.rs
hop-protocol/src/transport/: mock.rs
hop-protocol/tests/: integration.rs  multi_client_vpn.rs  transport_mock.rs
hop-tun/: Cargo.toml  README.md  README.zh-cn.md
hop-tun/examples/: simple_tun.rs
hop-tun/src/: config.rs  device.rs  error.rs  lib.rs  linux.rs  macos.rs  nat.rs  route.rs  windows.rs
hop-tun/tests/: integration.rs
packaging/linux/: ruhop-client.service  ruhop-server.service  ruhop.service  ruhop.toml.example
packaging/openwrt/: build-openwrt-package.sh
packaging/openwrt/assets/: ruhop.init  ruhop.toml.example  ruhop.uci
packaging/openwrt/luci/: Makefile  README.md
packaging/openwrt/luci/htdocs/luci-static/resources/view/ruhop/: client.js  general.js  log.js  server.js  status.js
packaging/openwrt/luci/luasrc/controller/: ruhop.lua
packaging/openwrt/luci/luasrc/model/cbi/ruhop/: client.lua  general.lua  server.lua
packaging/openwrt/luci/luasrc/view/ruhop/: log.htm  status.htm
packaging/openwrt/luci/po/templates/: ruhop.pot
packaging/openwrt/luci/root/etc/config/: ruhop
packaging/openwrt/luci/root/etc/init.d/: ruhop
packaging/openwrt/luci/root/usr/lib/ruhop/: gen-config.sh
packaging/openwrt/luci/root/usr/share/luci/menu.d/: luci-app-ruhop.json
packaging/openwrt/luci/root/usr/share/rpcd/acl.d/: luci-app-ruhop.json
packaging/windows/: installer.nsi  ruhop.toml.example
ruhop-app-interface/: Cargo.toml  README.md  README.zh-cn.md
ruhop-app-interface/src/: config.rs  control.rs  engine.rs  event.rs  lib.rs
ruhop-cli/: Cargo.toml  README.md  README.zh-cn.md
ruhop-cli/openwrt/assets/: ruhop.toml.example
ruhop-cli/scripts/: README.md  README.zh-CN.md  codes.unwritten.ruhop.plist  ruhop.openwrt  ruhop.service
ruhop-cli/src/: main.rs  service.rs  share.rs
ruhop-engine/: Cargo.toml  README.md  README.zh-cn.md
ruhop-engine/src/: addr_stats.rs  config.rs  control.rs  engine.rs  error.rs  event.rs  ipset.rs  lib.rs  script.rs  socket.rs
ruhop-engine/src/dns/: cache.rs  client.rs  config.rs  mod.rs  proxy.rs
ruhop-ipset/: Cargo.toml
ruhop-ipset/src/: ipset.rs  lib.rs  netlink.rs  nftset.rs  stub.rs
ruhop-ipset/tests/: integration_tests.rs
test/: client-scripts.toml  client-test.toml  client.toml  ruhop.toml  server-test.toml  server.toml  test-client.toml  test-server.toml
