[workspace]
members = ["hop-protocol", "hop-tun", "ruhop-engine", "ruhop-cli"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
authors = ["Chen Xu"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/chenxu/ruhop"
description = "A Rust implementation of the GoHop VPN protocol with port hopping capabilities"
