[workspace]
members = ["hop-protocol", "hop-tun", "ruhop-engine", "ruhop-cli"]
resolver = "2"

[workspace.package]
version = "0.11.0"
edition = "2021"
authors = ["Windoze <windoze@0d0a.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/windoze/ruhop"
description = "A Rust implementation of the GoHop VPN protocol with port hopping capabilities"
