[package]
name = "ruhop-app-interface"
version = "0.1.0"
edition = "2021"
description = "VPN engine interface for Ruhop - reusable across CLI and GUI applications"
license = "MIT OR Apache-2.0"

[dependencies]
# Core protocol and TUN support
hop-protocol = { path = "../hop-protocol" }
hop-tun = { path = "../hop-tun" }

# Async runtime
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "rt-multi-thread", "time", "signal", "process"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

# Logging
log = "0.4"
tracing = "0.1"

# Error handling
thiserror = "2"

# IP address handling
ipnet = "2.11"

# Async utilities
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
