[package]
name = "ruhop-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Ruhop VPN"

[[bin]]
name = "ruhop"
path = "src/main.rs"

[dependencies]
# VPN engine
ruhop-engine = { path = "../ruhop-engine" }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Base64 encoding for share URLs
base64 = "0.22"

# QR code generation (terminal display only, no image output)
qrcode = { version = "0.14", default-features = false }

# Windows service support
[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
hop-tun = { path = "../hop-tun" }

[package.metadata.bundle]
name = "Ruhop VPN"
identifier = "com.ruhop.vpn"
icon = ["../assets/icon.png"]
copyright = "Copyright (c) 2024"
category = "Utility"
short_description = "UDP-based VPN with port hopping"
long_description = """
Ruhop is a Rust implementation of the GoHop VPN protocol - a UDP-based VPN
with port hopping capabilities for traffic obfuscation.
"""

[package.metadata.bundle.deb]
depends = ["libc6", "systemd", "iptables", "iproute2", "kmod", "procps", "ethtool"]
section = "net"
priority = "optional"
assets = [
    ["target/release/ruhop", "/usr/bin/ruhop", "755"],
    ["../packaging/linux/ruhop.service", "/lib/systemd/system/ruhop.service", "644"],
    ["../packaging/linux/ruhop.toml.example", "/etc/ruhop/ruhop.toml.example", "644"],
]
conf_files = ["/etc/ruhop/ruhop.toml.example"]
maintainer_scripts = "../packaging/linux/scripts"

[package.metadata.bundle.nsis]
template = "../packaging/windows/installer.nsi"
resources = ["../packaging/windows/wintun.dll", "../packaging/windows/ruhop.toml.example"]
