[package]
name = "ruhop-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Ruhop VPN"

[[bin]]
name = "ruhop"
path = "src/main.rs"

[dependencies]
# VPN engine
ruhop-engine = { path = "../ruhop-engine" }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Base64 encoding for share URLs
base64 = "0.22"

# QR code generation (terminal display only, no image output)
qrcode = { version = "0.14", default-features = false }

# Windows service support
[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
hop-tun = { path = "../hop-tun" }

[package.metadata.packager]
product-name = "Ruhop VPN"
identifier = "codes.unwritten.ruhop"
icons = ["../assets/icon.png"]
resources = ["packaging/windows/wintun.dll", "packaging/windows/ruhop.toml.example"]
license-file = "../LICENSE"
copyright = "Copyright (c) 2024"
category = "Utility"
description = "UDP-based VPN with port hopping"
long-description = """
Ruhop is a Rust implementation of the GoHop VPN protocol - a UDP-based VPN
with port hopping capabilities for traffic obfuscation.
"""

[package.metadata.packager.deb]
depends = ["systemd", "iptables", "iproute2"]
section = "net"
priority = "optional"

[package.metadata.packager.deb.files]
"../packaging/linux/ruhop-client.service" = "/lib/systemd/system/ruhop-client.service"
"../packaging/linux/ruhop-server.service" = "/lib/systemd/system/ruhop-server.service"
"../packaging/linux/ruhop.toml.example" = "/etc/ruhop/ruhop.toml.example"

[package.metadata.packager.wix]

[package.metadata.packager.nsis]
template = "../packaging/windows/installer.nsi"
