[package]
name = "ruhop-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "VPN engine interface for Ruhop - reusable across CLI and GUI applications"

[dependencies]
# Core protocol and TUN support
hop-protocol = { path = "../hop-protocol" }
hop-tun = { path = "../hop-tun" }

# Async runtime
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "rt-multi-thread", "time", "signal", "process"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Logging
log = "0.4"
tracing = "0.1"

# Error handling
thiserror = "2"

# IP address handling
ipnet = "2.11"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Random number generation for port hopping
rand = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
