[package]
name = "ruhop-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "VPN engine interface for Ruhop - reusable across CLI and GUI applications"

[dependencies]
# Core protocol and TUN support
hop-protocol = { path = "../hop-protocol" }
hop-tun = { path = "../hop-tun" }

# Async runtime
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "rt-multi-thread", "time", "signal", "process"] }

# Low-level socket operations for IP_PKTINFO/IP_RECVDSTADDR
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Logging
log = "0.4"
tracing = "0.1"

# Error handling
thiserror = "2"

# IP address handling
ipnet = "2.11"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Random number generation for port hopping
rand = "0.9"

# DNS client library for DNS proxy
hickory-proto = "0.25"

# LRU cache for DNS caching
lru = "0.16"

# Bytes handling for DNS parsing
bytes = "1.11"

# HTTP client for DoH (DNS over HTTPS) - using rustls with ring (no aws-lc-rs)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }

# TLS for DoT (DNS over TLS) - using rustls with ring crypto provider (no aws-lc-rs)
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1"
webpki-roots = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["net", "uio"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
