[package]
name = "ruhop-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "VPN engine interface for Ruhop - reusable across CLI and GUI applications"

[dependencies]
# Core protocol, TUN support, and DNS
hop-protocol = { path = "../hop-protocol" }
hop-tun = { path = "../hop-tun" }
hop-dns = { path = "../hop-dns" }

# Async runtime
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "rt-multi-thread", "time", "signal", "process"] }

# Low-level socket operations for IP_PKTINFO/IP_RECVDSTADDR
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Logging
log = "0.4"
tracing = "0.1"

# Error handling
thiserror = "2"

# IP address handling
ipnet = "2.11"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Random number generation for port hopping
rand = "0.9"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["net", "uio"] }

[target.'cfg(target_os = "linux")'.dependencies]
ruhop-ipset = { path = "../ruhop-ipset" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
